# Krate

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/: main.py
extension/cmd/: package.bat
krate_extension/: main.py  pyproject.toml  requirements.txt
krate_extension/cmd/: package.bat  package.sh  test.sh
krate_extension/modules/: pdf_ops.py  word_ops.py
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  image.rs  log.rs  mod.rs  network.rs  pdf.rs  proxy.rs  system.rs
src/components/: Sidebar.vue
src/hooks/: pomodoroTypes.ts  useClipboard.ts  usePomodoro.ts  usePomodoroMiniBridge.ts
src/router/: index.ts  routes.ts
src/types/: vue-cropper.d.ts
src/views/: Home.vue  Settings.vue
src/views/doc/: PdfProtect.vue
src/views/games/: Breakout.vue  CowPuzzle.vue  Fishing.vue  Game2048.vue  GameHall.vue  Landlord.vue  Minesweeper.vue  cowPuzzleEngine.ts
src/views/image/: CompressTool.vue  ImageCropper.vue  ImageResizer.vue  QrGenerator.vue
src/views/system/: ClipboardHistory.vue  KrateArchive.vue  LogViewer.vue  PortManager.vue  ProxyManager.vue  SystemInfo.vue
src/views/text/: CodecTool.vue  CyberCalculator.vue  DiffTool.vue  HashTool.vue  JsonTool.vue  JwtParser.vue  PasswordGen.vue
src/views/time/: PomodoroMiniWindow.vue  PomodoroTool.vue
