[package]
name = "Krate"
version = "1.0.0"
description = "Krate 森哥工具箱"
authors = ["Xiaoyao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 保存二维码需要开启 image-png
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
image = "0.25.9"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tar = "0.4.44"
walkdir = "2.5.0"
flate2 = "1.1.8"
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "std"] }
zeroize = "1.8.2"
aead = { version = "0.5.2", features = ["alloc", "stream"] }
rand = "0.9.2"
