[package]
name = "Krate"
version = "1.0.0"
description = "Krate Xiaoyao 工具箱"
authors = ["Xiaoyao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 保存 png 需要用到 image-png
# tray-icon 开启后支持系统托盘
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
image = "0.25.9"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
# 归档相关
tar = "0.4.44"
flate2 = "1.1.8"
# 系统信息
sysinfo = "0.38.0"
native-tls = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
